Reformat / refactoring code; saving public keys in client,