@@ -2,6 +2,6 @@ package net.result.openhelo.exceptions;
 
 public class WrongTypeException extends Exception {
     public WrongTypeException(byte type) {
-        super("Using byte %b".formatted(type));
+        super(String.format("Using byte %b", type));
     }
 }
