@@ -2,7 +2,10 @@ package net.result.sandnode.config;
 
 import net.result.sandnode.exceptions.ConfigurationException;
 import net.result.sandnode.exceptions.ReadingKeyException;
-import net.result.sandnode.util.encryption.asymmetric.rsa.RSAKeySaver;
+import net.result.sandnode.exceptions.encryption.CannotUseEncryption;
+import net.result.sandnode.util.FileUtil;
+import net.result.sandnode.util.encryption.Encryption;
+import net.result.sandnode.util.encryption.asymmetric.Asymmetric;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.jetbrains.annotations.NotNull;
@@ -14,16 +17,14 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.Properties;
 
-import static net.result.sandnode.util.encryption.Encryption.RSA;
-
-public class HubConfig {
+public class HubConfig implements NodeConfig {
     private static final Logger LOGGER = LogManager.getLogger(HubConfig.class);
 
-    private final Path CONF_DIR;
+    private final Encryption MAIN_ENCRYPTION;
+    private final Encryption SYMMETRIC_ENCRYPTION;
     private final Path KEYS_DIR;
-    private final boolean USES_RSA;
-    private Path RSA_PUBLIC_KEY_PATH;
-    private Path RSA_PRIVATE_KEY_PATH;
+    private final Path PUBLIC_KEY_PATH;
+    private final Path PRIVATE_KEY_PATH;
 
     public HubConfig() {
         this("hub.properties");
@@ -34,76 +35,81 @@ public class HubConfig {
 
         try (InputStream input = getClass().getClassLoader().getResourceAsStream(fileName)) {
             if (input == null) {
-                throw new RuntimeException("Unable to find %s".formatted(fileName));
+                throw new RuntimeException(String.format("Unable to find %s", fileName));
             }
             properties.load(input);
         } catch (IOException e) {
-            throw new ConfigurationException("Failed to load configuration file: %s".formatted(fileName));
+            throw new ConfigurationException(String.format("Failed to load configuration file: %s", fileName));
         }
 
-        String defaultDirPath = "~/.openhelo/server/";
-        boolean defaultUseRsa = false;
+        String defaultDirPath = "~/.openhelo/hub/";
         String defaultKeysDirPath = "keys/";
 
-        CONF_DIR = PathUtil.resolveHomeInPath(Paths.get(properties.getProperty("server.dir_path", defaultDirPath)));
+        Path CONF_DIR = FileUtil.resolveHomeInPath(Paths.get(properties.getProperty("hub.dir_path", defaultDirPath)));
 
         try {
-            PathUtil.createDir(CONF_DIR);
+            FileUtil.createDir(CONF_DIR);
         } catch (IOException e) {
             throw new RuntimeException("Error creating configuration directory", e);
         }
 
-        USES_RSA = Boolean.parseBoolean(properties.getProperty("keys.rsa.use", String.valueOf(defaultUseRsa)));
-        KEYS_DIR = PathUtil.resolveHomeInPath(Paths.get(CONF_DIR.toString(), properties.getProperty("keys.dir_path", defaultKeysDirPath)));
+        MAIN_ENCRYPTION = Encryption.valueOf(properties.getProperty("keys.main", "RSA").toUpperCase());
+        SYMMETRIC_ENCRYPTION = Encryption.valueOf(properties.getProperty("keys.symmetric", "AES").toUpperCase());
+        KEYS_DIR = FileUtil.resolveHomeInPath(Paths.get(
+                CONF_DIR.toString(),
+                properties.getProperty("keys.dir_path", defaultKeysDirPath)
+        ));
 
-        if (USES_RSA) {
-            RSA_PUBLIC_KEY_PATH = PathUtil.resolveHomeInPath(Paths.get(
-                    KEYS_DIR.toString(),
-                    properties.getProperty("keys.rsa.public_key_path")
-            ));
-            RSA_PRIVATE_KEY_PATH = PathUtil.resolveHomeInPath(Paths.get(
-                    KEYS_DIR.toString(),
-                    properties.getProperty("keys.rsa.private_key_path")
-            ));
+        PUBLIC_KEY_PATH = FileUtil.resolveHomeInPath(Paths.get(
+                KEYS_DIR.toString(),
+                properties.getProperty("keys.public_key_path")
+        ));
+        PRIVATE_KEY_PATH = FileUtil.resolveHomeInPath(Paths.get(
+                KEYS_DIR.toString(),
+                properties.getProperty("keys.private_key_path")
+        ));
 
-            if (!Files.exists(KEYS_DIR)) {
-                LOGGER.info("KEYS_DIR does not exist, creating it: \"{}\"", KEYS_DIR);
-                try {
-                    PathUtil.createDir(KEYS_DIR);
-                } catch (IOException e) {
-                    throw new RuntimeException("Error creating \"%s\"".formatted(KEYS_DIR), e);
-                }
-            }
-
+        if (!Files.exists(KEYS_DIR)) {
+            LOGGER.info("KEYS_DIR does not exist, creating it: \"{}\"", KEYS_DIR);
             try {
-                if (!RSA_PUBLIC_KEY_PATH.toFile().exists() && !RSA_PRIVATE_KEY_PATH.toFile().exists()) {
-                    RSAKeySaver.getInstance().saveKeys(this, RSA.generator().generateKeyStorage());
-                }
+                FileUtil.createDir(KEYS_DIR);
             } catch (IOException e) {
-                throw new RuntimeException("Error managing RSA keys", e);
-            } catch (ReadingKeyException e) {
-                throw new RuntimeException(e);
+                throw new RuntimeException(String.format("Error creating \"%s\"", KEYS_DIR), e);
             }
+        }
+
+        try {
+            if (!PUBLIC_KEY_PATH.toFile().exists() && !PRIVATE_KEY_PATH.toFile().exists()) {
+                Asymmetric.getKeySaver(MAIN_ENCRYPTION)
+                        .saveHubKeys(this, MAIN_ENCRYPTION.generator().generateKeyStorage());
+            }
+        } catch (IOException e) {
+            throw new RuntimeException("Error managing RSA keys", e);
+        } catch (ReadingKeyException | CannotUseEncryption e) {
+            throw new RuntimeException(e);
         }
     }
 
-    public Path getConfDir() {
-        return CONF_DIR;
+    @Override
+    public @NotNull Encryption getMainEncryption() {
+        return MAIN_ENCRYPTION;
+    }
+
+    @Override
+    public @NotNull Encryption getSymmetricKeyEncryption() {
+        return SYMMETRIC_ENCRYPTION;
     }
 
     public Path getKeysDir() {
         return KEYS_DIR;
     }
 
-    public Path getRSAPublicKeyPath() {
-        return RSA_PUBLIC_KEY_PATH;
+    public Path getPublicKeyPath() {
+        return PUBLIC_KEY_PATH;
     }
 
-    public Path getRSAPrivateKeyPath() {
-        return RSA_PRIVATE_KEY_PATH;
+    public Path getPrivateKeyPath() {
+        return PRIVATE_KEY_PATH;
     }
 
-    public boolean useRSA() {
-        return USES_RSA;
-    }
 }
