@@ -4,8 +4,8 @@ import net.result.sandnode.messages.RawMessage;
 import net.result.sandnode.messages.util.MessageType;
 import org.jetbrains.annotations.NotNull;
 
-public class ExpectedMessageException extends Exception {
+public class ExpectedMessageException extends SandnodeException {
     public ExpectedMessageException(@NotNull MessageType messageType, RawMessage rawMessage) {
-        super("Expected type of message - \"%s\", got \"%s\"".formatted(messageType.name(), rawMessage));
+        super(String.format("Expected type of message - \"%s\", got \"%s\"", messageType.name(), rawMessage));
     }
 }
